// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TextFieldHint correctly 1`] = `
.emotion-0 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
  opacity: 1;
  -webkit-transition: visibility 0ms linear 0ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 0ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  visibility: visible;
}

<div>
  <div
    className="emotion-0"
  >
    Text field hint text
  </div>
</div>
`;

exports[`renders TextFieldHint when disabled 1`] = `
.emotion-0 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
  cursor: not-allowed;
  opacity: 1;
  -webkit-transition: visibility 0ms linear 0ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 0ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  visibility: visible;
}

<div>
  <div
    className="emotion-0"
  >
    Text field hint text
  </div>
</div>
`;

exports[`renders TextFieldHint when show is false 1`] = `
.emotion-0 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
}

<div>
  <div
    className="emotion-0"
  >
    Text field hint text
  </div>
</div>
`;
